--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -11020,7 +11020,7 @@
         "id": "M6DL1RJwGOf0"
       },
       "source": [
-        "### Pertanyaan 3: Bagaimana perbandingan penyewaan sepeda dalam seminggu?"
+        "### Pertanyaan 3: Bagaimana perbandingan jumlah penyewaan sepeda dalam seminggu?"
       ]
     },
     {
@@ -11233,7 +11233,7 @@
         "id": "NgfO3P8qXJrF"
       },
       "source": [
-        "Pertanyaan 3: Bagaimana perbandingan penyewaan sepeda dalam seminggu? Selama seminggu, terdapat perbedaan pola penyewaan antara pengguna casual dan registered. Pengguna casual cenderung menyewa sepeda lebih banyak pada akhir pekan (Sabtu dan Minggu). Sementara itu, pengguna registered menunjukkan pola yang lebih konsisten sepanjang hari kerja (Senin-Jumat)."
+        "Pertanyaan 3: Bagaimana perbandingan jumlah penyewaan sepeda dalam seminggu? Selama seminggu, terdapat perbedaan pola penyewaan antara pengguna casual dan registered. Pengguna casual cenderung menyewa sepeda lebih banyak pada akhir pekan (Sabtu dan Minggu). Sementara itu, pengguna registered menunjukkan pola yang lebih konsisten sepanjang hari kerja (Senin-Jumat)."
       ]
     },
     {
@@ -11449,10 +11449,10 @@
         "id": "ZTcyR48Y8DC2"
       },
       "source": [
-        "- Conclution pertanyaan 1: Bagaimana kondisi musim memengaruhi permintaan penyewaan sepeda? Kondisi musim memiliki pengaruh signifikan terhadap permintaan penyewaan sepeda. Permintaan tertinggi terjadi pada musim gugur, terutama dari pengguna registered. Musim panas juga menunjukkan permintaan tinggi. Sementara itu, musim semi dan musim dingin cenderung memiliki permintaan yang lebih rendah.\n",
+        "- Conclution pertanyaan 1: Bagaimana kondisi musim berpengaruh terhadap permintaan penyewaan sepeda? Kondisi musim memiliki pengaruh signifikan terhadap permintaan penyewaan sepeda. Permintaan tertinggi terjadi pada musim gugur, terutama dari pengguna registered. Musim panas juga menunjukkan permintaan tinggi. Sementara itu, musim semi dan musim dingin cenderung memiliki permintaan yang lebih rendah.\n",
         "- Conclution pertanyaan 2: Bagaimana kondisi cuaca berdampak pada permintaan penyewaan sepeda?Cuaca cerah cenderung mendorong permintaan penyewaan sepeda tertinggi baik dari pengguna casual maupun registered. Cuaca kabut dan hujan ringan mengurangi permintaan, sementara hujan lebat memiliki dampak negatif yang paling besar terhadap permintaan.\n",
-        "- Conclution pertanyaan 3: Bagaimana perbandingan penyewaan sepeda selama seminggu?Permintaan penyewaan sepeda cenderung lebih tinggi pada akhir pekan, terutama pada hari Sabtu. Pengguna casual lebih aktif pada hari Sabtu dan Minggu, sementara pengguna registered menunjukkan permintaan yang lebih konsisten sepanjang hari kerja.\n",
-        "- Conclution pertanyaan 4: Apakah ada pola khusus dalam permintaan sepeda berdasarkan waktu dalam sehari (misalnya, puncak permintaan pagi dan sore)? Ada pola permintaan sepeda yang jelas berdasarkan waktu dalam sehari, dengan puncak permintaan terjadi pada pagi dan sore hari. Pengguna casual lebih cenderung menyewa sepeda di siang hari, sedangkan pengguna registered lebih sering menyewa sepeda di pagi hari."
+        "- Conclution pertanyaan 3: Bagaimana perbandingan jumlah penyewaan sepeda selama seminggu? Permintaan penyewaan sepeda cenderung lebih tinggi pada akhir pekan, terutama pada hari Sabtu. Pengguna casual lebih aktif pada hari Sabtu dan Minggu, sementara pengguna registered menunjukkan permintaan yang lebih konsisten sepanjang hari kerja.\n",
+        "- Conclution pertanyaan 4: Bagaimana pola permintaan penyewaan sepeda berubah sepanjang waktu dalam sehari (misalnya, apakah ada puncak permintaan di pagi atau sore hari)? Ada pola permintaan sepeda yang jelas berdasarkan waktu dalam sehari, dengan puncak permintaan terjadi pada pagi dan sore hari. Pengguna casual lebih cenderung menyewa sepeda di siang hari, sedangkan pengguna registered lebih sering menyewa sepeda di pagi hari."
       ]
     },
     {
