--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -27,10 +27,10 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Apakah kondisi musim memengaruhi permintaan penyewaaan sepeda?\n",
-        "- Apakah kondisi cuaca memengaruhi permintaan penyewaan sepeda?\n",
-        "- Bagaimana perbandingan penyewaan sepeda dalam seminggu?\n",
-        "- Apakah ada pola khusus dalam permintaan sepeda berdasarkan waktu dalam sehari (misalnya, puncak permintaan pagi dan sore)?"
+        "- Bagaimana kondisi musim berpengaruh terhadap permintaan penyewaan sepeda?\n",
+        "- Bagaimana kondisi cuaca berdampak pada permintaan penyewaan sepeda?\n",
+        "- Bagaimana perbandingan jumlah penyewaan sepeda selama seminggu?\n",
+        "- Bagaimana pola permintaan penyewaan sepeda berubah sepanjang waktu dalam sehari (misalnya, apakah ada puncak permintaan di pagi atau sore hari)?"
       ]
     },
     {
